--- a/packages/theme/src/components/Dialog/Dialog.module.scss
+++ b/packages/theme/src/components/Dialog/Dialog.module.scss
@@ -51,6 +51,10 @@
   &[data-state="closed"] {
     animation: jumpOut 150ms ease-out;
   }
+
+  input {
+    color: var(--paragraph-color);
+  }
 }
 
 @keyframes jumpIn {
